fix: Optimze collapse caret

--- a/cms/contrib/frontend_v5/frontend/sass/components/pagetree/_tree-new-dom.scss
+++ b/cms/contrib/frontend_v5/frontend/sass/components/pagetree/_tree-new-dom.scss
@@ -233,6 +233,7 @@
     color: $gray;
     cursor: pointer;
     line-height: 1;
+    font-size: 12px;
 
     &::before {
         transition: transform $speed-base;
@@ -240,11 +241,6 @@
 
     &.cms-tree-toggle-open::before {
         transform: rotate(90deg);
-    }
-
-    &:hover:not(:disabled) {
-        background: $gray-lighter;
-        color: $gray-darkest;
     }
 
     &:disabled {
